# lincese_plate_detect

./: .gitignore  README.md  pred_video.py  predict.py  pyproject.toml  train.py
tools/: ccpd2coco.py  coco_viz.py  split_dataset.py
